# samid

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml
configs/: mics_4_square.json  mics_4_square_with_height.json  mics_example.json  shahed_prototype.json  shahed_prototype.npz  slides_outline.md
dashboard/: README.md  audit.html  dashboard.jsx  i18n.js  index.html  live.js  map.jsx  panels.jsx  poster.html
dashboard/assets/: dashboard.css  fonts.css  styles.css
scripts/: battery_watch.py  bootstrap.sh  build_shahed_prototype.py  calibrate_and_fix.py  deploy_hf.sh  diagnose_overfit.py  download_geronimobasso.py  download_mmaud.py  eval_cross_dataset.py  finetune_abdulrahman.py  finetune_fast.py  finetune_real_world.py  finetune_v2.py  finetune_v3.py  finetune_with_ood.py  make_overfit_story.py  make_pipeline_diagram.py  make_visuals.py  orchestrate.py  push_to_hub.py  serve.py  smoke_test.py  standalone_inference.py  test_ood_dataset.py  test_real_world.py  test_youtube_clip.py  triangulate.py  verify.py
server/: __init__.py  app.py  events.py  pipeline.py
src/: adversarial.py  augment.py  config.py  data.py  decoy.py  demo.py  inference.py  live_mic.py  losses.py  metrics.py  model.py  openset.py  predict.py  train.py  triangulation.py
